Trying to fix header positioning on mobile devices

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
 .section-header {
     background: #d1e8e2;
     color: #2c3531 !important;
+    width:auto;
 }
 
 
